--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
     <servlet>
         <servlet-name>extremeStartup</servlet-name>
-        <servlet-class>Referee</servlet-class>
+        <servlet-class>codedojo.Referee</servlet-class>
     </servlet>
 
     <servlet-mapping>
